--- a/html/templates/shipment_details.html
+++ b/html/templates/shipment_details.html
@@ -1,6 +1,8 @@
 {% extends 'base_shipment_details.html' %}
 {% load i18n l10n permissions users shipments commons %}
 
+{% block details_title %}{% trans "Envio" %}{% endblock %}
+
 {% block warehouses %}
           <!-- informacoes das warehouse - cadastro-->
           <hr>
