--- a/html/templates/base_shipment_details.html
+++ b/html/templates/base_shipment_details.html
@@ -16,7 +16,7 @@
 
         </div>
         <div class="col-md-10 main">
-          <h1 class="page-header"><i class="fa fa-archive"></i> {% trans "Envio" %} {{ shipment.id }}{% if shipment.is_canceled %} ({% trans "Cancelado" %}){% elif shipment.is_archived %} ({% trans "Arquivado" %}){% endif %}</h1>
+          <h1 class="page-header"><i class="fa fa-archive"></i> {% block details_title %}{% endblock %} {{ shipment.id }}{% if shipment.is_canceled %} ({% trans "Cancelado" %}){% elif shipment.is_archived %} ({% trans "Arquivado" %}){% endif %}</h1>
           <div class="table-responsive">
             <table class="table table-striped">
               <thead>
@@ -158,10 +158,17 @@
                     <div class="{% block package_info_class %}{% endblock %}">
                         <label><i class="fa fa-fw fa-info-circle"></i> {% trans "Informações do pacote" %}:</label><br><br>
                         <p><strong>{{ weight }}:</strong> {{ package.weight.value|unlocalize }} {% unit_weight_display 1 abbreviate=True %} / <strong>{% trans "Dimensões" %} - </strong> {{ length }}: {{ package.length.value|unlocalize }}{% unit_length_display 3 abbreviate=True %} x {{ width }}: {{ package.width.value|unlocalize }}{% unit_length_display 3 abbreviate=True %} x {{ height }}: {{ package.height.value|unlocalize }}{% unit_length_display 3 abbreviate=True %}</p>
-{% comment %}
+                        {% if user|has_shipment_perm:'add_package' %}
                         <!-- info localizacao visao usuario -->
-                        <p><strong>{% trans "Localização na warehouse" %}: </strong> Prateleira A32</p>
-{% endcomment %}
+                        <p>
+                            <strong>{{ package.pick_ticket.label }}: </strong>
+                            {% if shipment.status < 5 %}
+                            <input placeholder="{{ package.pick_ticket.label }}..." name="{{ package.pick_ticket.html_name }}" class="form-control" id="{{ package.pick_ticket.id_for_label }}" value="{% if package.pick_ticket.value %}{{ package.pick_ticket.value }}{% endif %}" aria-required="true" type="text">
+                            {% else %}
+                            {% if package.pick_ticket.value %}{{ package.pick_ticket.value }}{% endif %}
+                            {% endif %}
+                        </p>
+                        {% endif %}
                         <input type="hidden" name="{{ package.weight.html_name }}" value="{{ package.weight.value|unlocalize }}">
                         <input type="hidden" name="{{ package.length.html_name }}" value="{{ package.length.value|unlocalize }}">
                         <input type="hidden" name="{{ package.width.html_name }}" value="{{ package.width.value|unlocalize }}">
@@ -310,13 +317,11 @@
                             {% endfor %}
                             <span class="badge altura">{% trans "em" %} {% unit_length_display 3 %}</span>
                         </div>
-{% comment %}
                         <!-- Campo localizacao adm -->
                         <div class="col-md-3">
-                            <input placeholder="Localização..." name="local" class="form-control" id="local" value="" aria-required="true" type="text">
-                            <span class="badge altura">Localização na warehouse</span>
+                            <input placeholder="{{ package_form.pick_ticket.label }}..." name="{{ package_form.pick_ticket.html_name }}" class="form-control" id="{{ package_form.pick_ticket.id_for_label }}" value="{% if package_form.pick_ticket.value %}{{ package_form.pick_ticket.value }}{% endif %}" aria-required="true" type="text">
+                            <span class="badge altura">{{ package_form.pick_ticket.label }}</span>
                         </div>
-{% endcomment %}
                         {% if forloop.first is False %}
                         <div class="col-md-2">
                             <a class="rem-track btn btn-danger rem-pacote-shipment inline-deletelink" title="{{ packages.deleteText }}" href="#"><i class="fa fa-fw fa-times"></i></a>
