--- a/html/templates/merchant_shipment_details.html
+++ b/html/templates/merchant_shipment_details.html
@@ -1,6 +1,8 @@
 {% extends 'base_shipment_details.html' %}
 {% load i18n l10n permissions users shipments commons %}
 
+{% block details_title %}{% trans "Envio Merchant" %}{% endblock %}
+
 {% block info_values %}col-md-6{% endblock %}
 
 {% block info_created_date %}col-md-6{% endblock %}
