permitir administrador alterar quantidade de produtos.

--- a/html/templates/product_add_edit.html
+++ b/html/templates/product_add_edit.html
@@ -52,7 +52,7 @@
                 </div><br>
                 <div class="form-group col-md-12">
                   <label for="{{ form.quantity.id_for_label }}">{{ form.quantity.label }}*</label>
-                  {% if form.status.value is None or form.status.value == 1 %}
+                  {% if form.status.value is None or form.status.value == 1 or if user|has_product_perm:'change_product_status' %}
                     {% trans "Digite a quantidade" as quantity %}
                   <input type="number" class="form-control menor quantity_validate" id="{{ form.quantity.id_for_label }}" name="{{ form.quantity.html_name }}" placeholder="{{ quantity }}..." value="{% if form.quantity.value %}{{ form.quantity.value|unlocalize }}{% endif %}">
                   {% for error in form.quantity.errors %}
