--- a/html/templates/product_stock.html
+++ b/html/templates/product_stock.html
@@ -54,10 +54,15 @@
                           <option value="99" {{ archived_filter_status }}>{% trans "Arquivado" %}</option>
                         </select>
                     </div>
-                    <div class="form-group col-md-2">
+                    <div class="form-group col-md-3">
                         {% trans "Rastreamento" as tracking_label %}
                         <label for="filtro-Rastreamento">{{ tracking_label }}</label>
                         <input type="text" class="form-control" id="filtro-Rastreamento" name="tracking" placeholder="{{ tracking_label }}..." value="{{ filter_values.tracking }}">
+                    </div>
+                    <div class="form-group col-md-3">
+                        {% trans "Loja" as store_label %}
+                        <label for="filtro-Loja">{{ store_label }}</label>
+                        <input type="text" class="form-control" id="filtro-Loja" name="store" placeholder="{{ store_label }}..." value="{{ filter_values.store }}">
                     </div>
                     <div class="col-md-12">
                         <label for="filtro-arquivado">
