--- a/html/templates/login.html
+++ b/html/templates/login.html
@@ -31,11 +31,22 @@
 
 <body id="page-top" class="login">
     <div id="login-box">
-            {% if LANGUAGE_CODE == 'pt-br' %}
-            <img src="/static/img/logo-maquina-vendas.png" width="150px" />
-            {% else %}
             <img src="/static/img/logo-en-maior.png" style="width: 170px;" />
-            {% endif %}
+<form action="{% url 'my_set_language' %}" method="post">{% csrf_token %}
+    <input name="next" type="hidden" value="{{ redirect_to }}" />
+    <select name="language">
+        {% get_current_language as LANGUAGE_CODE %}
+        {% get_available_languages as LANGUAGES %}
+        {% get_language_info_list for LANGUAGES as languages %}
+        {% for language in languages %}
+            <option value="{{ language.code }}"{% if language.code == LANGUAGE_CODE %} selected{% endif %}>
+                {{ language.name_local }} ({{ language.code }})
+            </option>
+        {% endfor %}
+    </select>
+    <input type="submit" value="Go" />
+</form>
+
             <p>{% trans "Digite abaixo seus dados de acesso" %}</p>
             <form action="" method="post" id="form-login">
               {% csrf_token %}
