--- a/html/templates/user_reset_password.html
+++ b/html/templates/user_reset_password.html
@@ -50,7 +50,7 @@
                 <ul class="nav navbar-nav navbar-right">
 
                     <li>
-                        <a href="/login/"><strong><i class="fa fa-sign-in"></i></strong> {% trans "Login" %}</a>
+                        <a href="{% url 'login' %}"><strong><i class="fa fa-sign-in"></i></strong> {% trans "Login" %}</a>
                     </li>
                 </ul>
             </div>
@@ -61,7 +61,7 @@
             <div class="box-resposta">
             {% if finish %}
                 <p>{% trans "Senha alterada com sucesso." %}</p>
-                <p><a class="download" href="/login">{% trans "Clique aqui" %}</a> {% trans "para realizar o seu login no sistema." %}</p>
+                <p><a class="download" href="{% url 'login' %}">{% trans "Clique aqui" %}</a> {% trans "para realizar o seu login no sistema." %}</p>
             {% else %}
                 {% if success or valid %}
 
