--- a/html/templates/includes/layout.html
+++ b/html/templates/includes/layout.html
@@ -48,7 +48,7 @@
 
 </head>
 
-<body id="page-top" class="lista-usuarios sistema {% if LANGUAGE_CODE == 'en' %}sistema-en{% endif %}">
+<body id="page-top" class="lista-usuarios sistema sistema-en">
  <header class="bs-docs-nav navbar navbar-static-top header-sistema" id="top">
         <div class="container">
             <div class="navbar-header">
@@ -228,6 +228,21 @@
                     </li>
                 </ul>
             </nav>
+            <form action="{% url 'my_set_language' %}" method="post">{% csrf_token %}
+                {% get_current_language as LANGUAGE_CODE %}
+                {% get_available_languages as LANGUAGES %}
+                {% get_language_info_list for LANGUAGES as languages %}
+                {% for language in languages %}
+                    {% if language.code != LANGUAGE_CODE %}
+                        <input type="hidden" name="language" value="{{ language.code }}">
+                        {% if language.code == 'en' %}
+                            <input title="Translate to English" class="bandeira bandeira-en" type="submit">
+                        {% else %}
+                            <input title="Traduzir para português do Brasil" class="bandeira" type="submit">
+                        {% endif %}
+                    {% endif %}
+                {% endfor %}
+            </form>
         </div>
     </header>
 
