--- a/html/templates/user_validation.html
+++ b/html/templates/user_validation.html
@@ -47,7 +47,7 @@
                 <ul class="nav navbar-nav navbar-right">
 
                     <li>
-                        <a href="/login/"><strong><i class="fa fa-sign-in"></i></strong> {% trans "Login" %}</a>
+                        <a href="{% url 'login' %}"><strong><i class="fa fa-sign-in"></i></strong> {% trans "Login" %}</a>
                     </li>
                 </ul>
             </div>
