--- a/html/templates/includes/layout.html
+++ b/html/templates/includes/layout.html
@@ -320,7 +320,7 @@
                 <div class="modal-body">
                     <p><strong>{% trans "Veja abaixo o nosso endereço para o qual você deve enviar seus produtos antes que eles sejam enviados para Amazon/Ebay." %}</strong></p>
                     <br>
-                    <p class="center">Address: 8611 SW 207 Terrace<br />City: Miami<br />State: FL<br />Zip code: 33189</p>
+                    <p class="center">Address: 8611 SW  207 Terrace<br />City: Miami ou Cutler Bay<br />State: FL<br />Zip code: 33189</p>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">{% trans "Fechar" %}</button>
