--- a/html/templates/detalhe_envio_brasil.html
+++ b/html/templates/detalhe_envio_brasil.html
@@ -196,6 +196,26 @@
                         <p>UYTR865JHJFJFJ</p>
                     </div>
                 </div>
+
+
+
+                <div class="col-md-3">
+                    <div class="upload-pdf-edit">
+                        <div class="link-download-pdf"><br>
+                            <a href="" class="download" target="_blank">Download</a>
+                            <a href="javascript:void(0);" class="btn btn-warning edit-pdf"><i class="fa fa-fw fa-pencil-square-o"></i> Alterar</a>
+                        </div>
+                        <div class="input-content-edit-pdf"><br>
+                            <input class="form-control input-70" id="pdf-edit" name="pdf-edited" aria-required="true" type="file" />
+                            <a href="javascript:void(0);" class="btn btn-default edit-pdf-undo"><i class="fa fa-fw fa-undo"></i></a>
+                        </div>
+                    </div>
+                </div>
+
+
+
+
+
             </div>
         </div><hr />
         <div class="row">
