--- a/html/templates/base_shipment_details.html
+++ b/html/templates/base_shipment_details.html
@@ -188,7 +188,19 @@
                         <p>{% trans "Upload não permitido" %}</p>
                           {% endif %}
                         {% else %}
-                        <p><a href="{% url 'shipment_pdf_2' 'pdf_2' package.id.value %}" class="download" target="_blank">Download</a></p>
+                        <div class="upload-pdf-edit">
+                            <div class="link-download-pdf"><br>
+                                <a href="{% url 'shipment_pdf_2' 'pdf_2' package.id.value %}" class="download" target="_blank">Download</a>
+                                <a href="javascript:void(0);" class="btn btn-warning edit-pdf"><i class="fa fa-fw fa-pencil-square-o"></i> {% trans "Alterar" %}</a>
+                            </div>
+                            <div class="input-content-edit-pdf"><br>
+                                <input class="form-control input-70" id="pdf-edit" name="pdf-edited" aria-required="true" type="file" />
+                                <a href="javascript:void(0);" class="btn btn-default edit-pdf-undo"><i class="fa fa-fw fa-undo"></i></a>
+                            </div>
+                        </div>
+
+
+
                         {% endif %}
                     </div>
                     <div class="{% block package_tracking_class %}{% endblock %}">
