--- a/html/templates/user_registration.html
+++ b/html/templates/user_registration.html
@@ -66,7 +66,7 @@
                 <br><br><br>
                 <label> {% trans "Leia <a href='/termos-e-condicoes-de-uso.html' class='download'>aqui</a> nossos termos e condições de uso da plataforma." %}</label>
                 <br /><br><br>
-                <label> {% trans "Se ainda tiver dúvidas, veja nossos tutorias de utilização da plataforma <a href='/ajuda.html' class='download'>aqui</a>." %}</label>
+                <label> {% trans "Se ainda tiver dúvidas, veja nossos tutorias de utilização da plataforma <a href='/pt/ajuda/' class='download'>aqui</a>." %}</label>
             </div>
             <div class="col-md-6">
                 <form action="" method="post" class="form-cad-cliente" id="form-add-user">
