--- a/html/templates/base_shipment_details.html
+++ b/html/templates/base_shipment_details.html
@@ -91,8 +91,8 @@
           {% if shipment.status != 1 %}
           <form action="" method="post" id="form-upload-file" enctype="multipart/form-data">
           {% endif %}
-          {% if shipment.status == 1 and user|has_shipment_perm:'add_package' %}
-          <form action="{% url 'shipment_details' shipment.id %}" method="post" id="form-add-package">
+          {% if shipment.status == 1 %}
+          <form action="{% url 'shipment_details' shipment.id %}" method="post" id="form-add-package" enctype="multipart/form-data">
           {% endif %}
           <div class="row">
             <div class="{% block info_values %}{% endblock %}">
@@ -142,7 +142,7 @@
                   {% elif shipment.status > 3 and user|has_shipment_perm:'add_package' %}
                   <input type="hidden" name="add_package_tracking" value="1">
                   {% endif %}
-                  {% if shipment.status <= 3 and user|has_shipment_perm:'add_package' %}
+                  {% if shipment.status <= 4 and user|has_shipment_perm:'add_package' %}
                     <input type="hidden" name="edit_package_warehouse" value="1">
                   {% endif %}
                  {% block add_info_2 %}{% endblock %}
@@ -191,12 +191,16 @@
                         <div class="upload-pdf-edit">
                             <div class="link-download-pdf"><br>
                                 <a href="{% url 'shipment_pdf_2' 'pdf_2' package.id.value %}" class="download" target="_blank">Download</a>
+                                {% if shipment.status < 5 %}
                                 <a href="javascript:void(0);" class="btn btn-warning edit-pdf"><i class="fa fa-fw fa-pencil-square-o"></i> {% trans "Alterar" %}</a>
+                                {% endif %}
                             </div>
+                            {% if shipment.status < 5 %}
                             <div class="input-content-edit-pdf"><br>
-                                <input class="form-control input-70" id="pdf-edit" name="pdf-edited" aria-required="true" type="file" />
+                                {{ package.pdf_2 }}
                                 <a href="javascript:void(0);" class="btn btn-default edit-pdf-undo"><i class="fa fa-fw fa-undo"></i></a>
                             </div>
+                            {% endif %}
                         </div>
 
 
@@ -364,8 +368,8 @@
             {% endif %}
            {% endif %}
              <div class="row">
-             {% if shipment.is_canceled is False and shipment.status < 5 %}
-              {% if shipment.is_archived %}
+             {% if shipment.is_canceled is False %}
+              {% if shipment.is_archived and shipment.status < 5 %}
                  <!-- Botao arquivar -->
                  <a class="btn btn-primary filtar-btn alterar-status" id="restore-btn" href="#">
                     <i class="fa fa-fw fa-edit"></i> {% trans "Reativar Envio" %}
@@ -377,7 +381,7 @@
                 </a>
                 <br><br>
                {% endif %}
-               {% if shipment.status == 1 and user|has_shipment_perm:'add_package' %}
+               {% if shipment.status == 1 %}
                 <a class="btn btn-primary filtar-btn alterar-status" id="send-btn-1" href="#">
                     <i class="fa fa-fw fa-paper-plane"></i> {% trans "Salvar" %}
                 </a>
@@ -391,15 +395,11 @@
                 <br><br>
                 {% endif %}
                {% endif %}
-               {% if shipment.status == 5 or shipment.status == 3 %}
-                 {% if shipment.status == 5 or shipment.type is None %}
-                  {% if user|has_shipment_perm:'add_package' %}
+               {% if shipment.status == 5 and user|has_group:'admins' or shipment.status == 4 or shipment.status == 3 %}
                 <a class="btn btn-primary filtar-btn alterar-status" id="send-btn-5" href="#">
                     <i class="fa fa-fw fa-paper-plane"></i> {% trans "Salvar" %}
                 </a>
                 <br><br>
-                 {% endif %}
-                {% endif %}
                {% endif %}
                {% if user|has_group:'admins' %}
                 {% if shipment.status < 4 %}
@@ -415,11 +415,14 @@
                 <br><br>
                 {% endif %}
                {% endif %}
+               {% if shipment.status < 5 %}
                  <!-- Botao arquivar -->
                  <a class="btn btn-danger filtar-btn alterar-status" id="archive-btn" href="#">
                     <i class="fa fa-fw fa-archive"></i> {% trans "Arquivar Envio" %}
                  </a>
+               {% endif %}
               {% endif %}
+              {% if shipment.status < 5 %}
                  <br><br>
                  <form action="{% if shipment.is_archived %}{% url 'shipment_archive' shipment.id '1' %}{% else %}{% url 'shipment_archive' shipment.id '2' %}{% endif %}" method="post" id="form-archive-shipment">
                     {% csrf_token %}
@@ -431,6 +434,7 @@
                     <i class="fa fa-fw fa-remove"></i> {% trans "Cancelar Envio" %}
                  </a>
                  <br><br>
+              {% endif %}
              {% endif %}
                 <a href="javascript:history.back()"><i class="fa fa-fw fa-long-arrow-left"></i> {% trans "Voltar" %}</a>
                 <br><br><br><br>
