--- a/html/static/css/style.css
+++ b/html/static/css/style.css
@@ -1135,6 +1135,18 @@ label.titulo-pct span{
     padding: 40px 20px 20px 20px;
 }
 
+.modal-m .modal-dialog{
+    max-width: 600px;
+}
+
+.modal-m label{
+    line-height: 32px;
+}
+
+.modal-m .checkbox{
+    text-align: left;
+}
+
 .img-ajuda-center{
     display: block;
     margin: 0 auto;
@@ -1177,8 +1189,8 @@ label.titulo-pct span{
     height: 475px;
     position: absolute;
     padding: 20px;
-    top: -470px;
-    right: -80px;
+    top: -526px;
+    right: -139px;
     text-align: left;
 }
 .status:after{
