--- a/html/templates/detalhe_envio_brasil.html
+++ b/html/templates/detalhe_envio_brasil.html
@@ -8,7 +8,7 @@
 
 {% block specific_scripts %}
     <script src="/static/externo/ckeditor/ckeditor.js"></script>
-    <script src="/static/js/specifics/shipment.js"></script>
+
 {% endblock %}
 
 
@@ -47,8 +47,9 @@
                   <th>Peso</th>
                   <th class="center">Quantidade</th>
 
-                  <th>Retirar</th>
+                  <th class="center">Retirar</th>
 
+                  <th class="center">Services</th>
                 </tr>
               </thead>
               <tbody>
@@ -60,10 +61,43 @@
                   <td class="center">
                       <input type="number" class="form-control menor-m quantity_validate required-number-validate" id="item_qtd" name="item_qtd" value="" aria-required="true">
                   </td>
-                  <td>
+                  <td class="center">
                       <a class="btn btn-danger inline-deletelink" title="Remover item" href="javascript:void(0);"><i class="fa fa-fw fa-close"></i></a>
                   </td>
 
+                  <!-- Novo botao servicos -->
+                  <td class="center">
+                      <a class="btn btn-primary inline-service" title="Manager Prep Service" href="javascript:void(0);"><i class="fa fa-fw fa-cogs"></i></a>
+                      <!-- Popup para marcar os servicos -->
+                        <div id="prodtuto-1" class="modal fade modal-m">
+                            <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                                        <h4 class="modal-title"><i class="fa fa-fw fa-cogs"></i> Serviços necessários para o "Prep" desses produtos</h4>
+                                    </div>
+                                    <div class="modal-body">
+                                        <div class="checkbox">
+                                            <label><input type="checkbox" /> Flate Rate - USD 1,49</label>
+                                        </div>
+                                        <div class="checkbox">
+                                            <label><input type="checkbox" /> Label - USD 1,40</label>
+                                        </div>
+                                        <div class="checkbox">
+                                            <label><input type="checkbox" /> Buble Wrap - USD 1,30</label>
+                                        </div>
+                                        <div class="checkbox">
+                                            <label><input type="checkbox" /> No Prep - USD 0,40</label>
+                                        </div>
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-primary">Salvar</button>
+                                        <button type="button" class="btn btn-default" data-dismiss="modal">Fechar</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                  </td>
                 </tr>
 
               </tbody>
